kubernetes/apps/security/vaultwarden/app/ingress-admin.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-admin
  annotations:
    external-dns/is-public: "false"
    hajimari.io/enable: "true"
    hajimari.io/icon: shield-lock-outline
    hajimari.io/group: services
    hajimari.io/appName: vaultwarden-admin
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "traefik-chain-internal-secure-noauth@kubernetescrd"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "kinko.${SECRET_DOMAIN}"
      secretName: "kinko.${SECRET_DOMAIN//./-}-prod-tls"
  rules:
    - host: kinko.${SECRET_DOMAIN}
      http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  number: 80
