kubernetes/apps/security/vaultwarden/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  annotations:
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: "ipv6.${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/hostname: kinko.${SECRET_DOMAIN}
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    hajimari.io/enable: "true"
    hajimari.io/icon: shield-lock-outline
    hajimari.io/group: home
    hajimari.io/appName: kinko
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "traefik-chain-cloudflare-secure-noauth@kubernetescrd"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "kinko.${SECRET_DOMAIN}"
      secretName: "kinko.${SECRET_DOMAIN//./-}-prod-tls"
  rules:
    - host: kinko.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  number: 80
